/*
 * Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
 * Click nbfs://nbhost/SystemFileSystem/Templates/Classes/Class.java to edit this template
 */
package designpattern.Behavioral.stratery.baitap1;

/**
 *
 * @author THIS PC
 */
public class Chia implements ITinh{

    @Override
    public float tinh(float a, float b) {
      return a/b;
    }
    
}
