/*
 * Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
 * Click nbfs://nbhost/SystemFileSystem/Templates/Classes/Interface.java to edit this template
 */
package designpattern.Behavioral.stratery.baitap1;

/**
 *
 * @author THIS PC
 */
public interface ITinh {
    public float tinh(float a, float b);
}
