/*
 * Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
 * Click nbfs://nbhost/SystemFileSystem/Templates/Classes/Class.java to edit this template
 */
package designpattern.Behavioral.stratery.baitap2;

public class HangHoa {
    private String tenHangHoa;
    private int gia;
    private String moTa;

    public HangHoa(String tenHangHoa, int gia, String moTa) {
        this.tenHangHoa = tenHangHoa;
        this.gia = gia;
        this.moTa = moTa;
    }

    public int getGia() {
        return gia;
    }

}