/*
 * Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
 * Click nbfs://nbhost/SystemFileSystem/Templates/Classes/Interface.java to edit this template
 */
package designpattern.Behavioral.stratery.baitap3;

/**
 *
 * @author THIS PC
 * @param <T>
 */
public interface ISoSanh <T> {
    public int soSanh(T o1, T o2);
}
